--- a/_posts/2021-07-06-welcome.md
+++ b/_posts/2021-07-06-welcome.md
@@ -1,12 +1,12 @@
 ---
 layout: podcast
 categories: podcast # podcast
-title: Willkommen in Marcologie Universum
+title: Willkommen im Marcologie Universum
 author: Marc Retz
 season: 1
 episode: 1
 episodeType: full # full | trailer | bonus
 explicit: false # true | false
-audio: https://sample.net/audio.opus
-length: 3927 # in seconds
+audio: https://dl.retz.io/podcasts/marcologie/demo.mp3
+length: 10 # in seconds
 ---
