--- a/_posts/2021-07-10-welcome.md
+++ b/_posts/2021-07-10-welcome.md
@@ -11,4 +11,4 @@ audio: https://dl.retz.io/podcasts/marcologie/s01_e01.mp3
 length: 10 # in seconds
 ---
 
-Hallo, schön das du meinen Podcast entdeckt hast. Diese Folge erklärt die um was es in der Marcologie geht und was meine motivation gewesen ist das zu machen
+Hallo, schön das du meinen Podcast entdeckt hast. Diese Folge erklärt die um was es in der Marcologie geht und wie ich dazu gekommen bin
