--- a/_posts/2021-07-10-welcome.md
+++ b/_posts/2021-07-10-welcome.md
@@ -2,7 +2,7 @@
 layout: podcast
 categories: podcast # podcast
 title: Willkommen im Marcologie Universum
-author: Marc Retz
+author: TheLegendaryMarc
 season: 1
 episode: 1
 episodeType: full # full | trailer | bonus
